# src/controllers/auth/auth.routes.ts
@@ -4,3 +4,11 @@ import * as Controller from './auth.controller';
 export const AuthRouter = Router();
 
 AuthRouter.post('/sign-in', Controller.signIn);
+AuthRouter.post('/sign-up', Controller.signUp);
+AuthRouter.post('/send-otp/confirm-email', Controller.sendOtp);
+AuthRouter.post('/forgotPassword', Controller.forgotPassword);
+AuthRouter.post('/resend-otp/confirm-email', Controller.resendOtpForConfirmEmail);
+AuthRouter.post('/resend-otp/reset-password', Controller.resendOtpForConfirmResetPass);
+AuthRouter.post('/verify-otp/reset-password', Controller.verifyOtpForResetPass);
+AuthRouter.put('/reset-password', Controller.resetPassword);
+AuthRouter.put('/sign-in', Controller.signIn);
